refactor : 파일 읽기 기능 수정